--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,12 +1,13 @@
 preload = /home/warp/.config/hypr/wallpapers/solarized_triangle.jpg
 preload = /home/warp/.config/hypr/wallpapers/solarized_dots.jpg
+preload = /home/warp/.config/hypr/wallpapers/cult.png
 
 # if more than one preload is desired then continue to preload other backgrounds
 # preload = /path/to/next_image.png
 # .. more preloads
 
 # set the default wallpaper(s) seen on initial workspace(s) --depending on the number of monitors used
-wallpaper = DP-1,/home/warp/.config/hypr/wallpapers/solarized_triangle.jpg
+wallpaper = DP-1,/home/warp/.config/hypr/wallpapers/cult.png
 # if more than one monitor in use, can load a 2nd image
 # wallpaper = monitor2,/path/to/next_image.png
 # .. more monitors
