--- a/kitty/solarized_dark.conf
+++ b/kitty/solarized_dark.conf
@@ -1,5 +1,5 @@
 cursor_text_color       background
-cursor_shape            underline
+cursor_shape            block
 cursor_beam_thickness        1.5
 cursor_underline_thickness   4.0
 cursor_blink_interval        0.6
@@ -7,7 +7,10 @@ cursor_stop_blinking_after  10.0
 
 background              #002b36
 foreground              #839496
-cursor                  #93a1a1
+cursor                  #cb4b16
+
+active_border_color     #b58900
+inactive_border_color   #465a61
 
 selection_background    #81908f
 selection_foreground    #002831
