--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # Font
-font_family      BlexMono Nerd Font
+font_family      JetBrainsMono Nerd Font
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
@@ -12,7 +12,7 @@ background_opacity 1
 background_blur 0
 
 # Window settings 
-window_border_width 1.5pt
+window_border_width 1px
 draw_minimal_borders yes
 window_padding_width 4
 placement_strategy center
