--- a/qt6ct/qt6ct.conf
+++ b/qt6ct/qt6ct.conf
@@ -6,8 +6,8 @@ standard_dialogs=gtk3
 style=kvantum-dark
 
 [Fonts]
-fixed="IBM Plex Mono,11,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
-general="IBM Plex Sans,11,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
+fixed="JetBrainsMono Nerd Font,11,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
+general="Inter,11,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
 
 [Interface]
 activate_item_on_single_click=1
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3W\0\0\x2\x5\0\0\0\0\0\0\0\0\0\0\x3_\0\0\x2\x1b\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3W\0\0\x2\x5)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\au\0\0\x4\x12\0\0\0\0\0\0\0\0\0\0\a\x7f\0\0\x4\x37\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\au\0\0\x4\x12)
 
 [Troubleshooting]
 force_raster_widgets=1
