--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -6,13 +6,11 @@ source = ~/.config/hypr/windowrules.conf
 
 monitor=DP-1,1920x1080@144,0x0,1
 
-# Some default env vars.
 env = XCURSOR_SIZE,24
 env = XCURSOR_THEME,Capitaine Cursors - White
 env = QT_QPA_PLATFORMTHEME,qt6ct # change to qt6ct if you have that
 env = RANGER_LOAD_DEFAULT_RC,false
 
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us,ru
     kb_variant = #leave it blank for default layout or add colemak_dh, (with comma)
@@ -42,9 +40,6 @@ general {
     col.inactive_border = rgba(586e75ff)
     no_border_on_floating = false
 
-    cursor_inactive_timeout = 10
-    no_cursor_warps = true
-
     layout = master # Use "dwindle" or "master" for alternative layout, binds for master below
 
     allow_tearing = false
@@ -56,8 +51,8 @@ decoration {
 
     blur {
         enabled = true
-        size = 4
-        passes = 3
+        size = 5
+        passes = 5
         popups = true
         special = true
         new_optimizations = true
@@ -98,7 +93,7 @@ animations {
 dwindle {
     pseudotile = true
     preserve_split = true # you probably want this
-    special_scale_factor = 0.92
+    special_scale_factor = 0.95
     force_split = 2
 }
 
@@ -106,11 +101,12 @@ master {
     new_is_master = false
     new_on_top = true
     orientation = right
-    mfact = 0.55
+    mfact = 0.5
     inherit_fullscreen = true
     allow_small_split = true
     always_center_master = true
-    special_scale_factor = 0.92
+    special_scale_factor = 0.95
+    drop_at_cursor = false
 }
 
 gestures {
@@ -121,12 +117,21 @@ misc {
     focus_on_activate = false
     animate_manual_resizes = true
     enable_swallow = true
-    swallow_regex = ^(Alacritty|kitty|footclient)$
+    swallow_regex = ^(kitty)$
     disable_hyprland_logo = true
     disable_splash_rendering = true
     mouse_move_enables_dpms = true
     key_press_enables_dpms = true
     allow_session_lock_restore = true
-    hide_cursor_on_key_press = true
     new_window_takes_over_fullscreen = 2
+    initial_workspace_tracking = 0
+    middle_click_paste = true
+    render_ahead_safezone = 2
+}
+
+cursor {
+    enable_hyprcursor = true
+    no_warps = true
+    inactive_timeout = 6
+    hide_on_key_press = true
 }
