--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # Font
-font_family      JetBrainsMono Nerd Font
+font_family      BlexMono Nerd Font
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
@@ -25,6 +25,6 @@ cursor_blink_interval   0.6
 cursor_stop_blinking_after 10.0
 
 enable_audio_bell no
-shell_integration no-cursor
+shell_integration enable
 sync_to_monitor yes
 include ./solarized_dark.conf
